putting the files in the classes directory, these get linked through the native classpath; moved all the native peer classes to the peers directory, added an exmple .jpf file in lieu of the launch configuration, modified the build files

--- a/.classpath
+++ b/.classpath
@@ -17,11 +17,12 @@
 	<classpathentry kind="lib" path="/jpf-core/lib/junit-4.6.jar"/>
 	<classpathentry kind="lib" path="/jpf-core/build/RunJPF.jar"/>
 	<classpathentry kind="lib" path="/jpf-core/build/jpf.jar"/>
-	<classpathentry excluding="main/|examples/|peers/|tests/|annotations/" kind="src" path="src"/>
+	<classpathentry excluding="main/|examples/|peers/|tests/|annotations/|classes/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/main"/>
 	<classpathentry kind="src" path="src/examples"/>
 	<classpathentry kind="src" path="src/peers"/>
 	<classpathentry kind="src" path="src/tests"/>
 	<classpathentry kind="src" path="src/annotations"/>
+	<classpathentry kind="src" path="src/classes"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
