--- a/jpf.properties
+++ b/jpf.properties
@@ -3,22 +3,23 @@
 # only process this properties file if on top of the jpf-core model classes
 # (we override and add to java.util.concurrent* and need to make sure this does
 # not get mixed)
-requires=\
-  jpf-core.classpath
 
 jpf-symbc = ${config_path}
 
 jpf-symbc.native_classpath=\
-  build/main,\
-  build/peers
+  build/jpf-symbc.jar,\
+  lib/choco-1_2_04.jar
 
 jpf-symbc.classpath=\
-  build/examples,\
-  build/classes
+  build/jpf-symbc-classes.jar 
 
-jpf-symbc.sourcepath=\
-  src/examples
 
-jpf-symbc.peer_packages=\
-  gov.nasa.jpf.symbc  
+### configurations specific to the symbc project
+
+
+peer_packages= gov.nasa.jpf.symbc,${peer_packages}
+
+insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
+
+vm.storage.class= 
 
