--- a/jpf.properties
+++ b/jpf.properties
@@ -8,7 +8,13 @@ jpf-symbc = ${config_path}
 
 jpf-symbc.native_classpath=\
   build/jpf-symbc.jar,\
-  lib/choco-1_2_04.jar
+  lib/choco-1_2_04.jar,lib/STPJNI.jar,\
+  lib/hampi.jar,lib/scale.jar,\
+  lib/automaton.jar,lib/iasolver.jar,\
+  lib/string.jar,lib/libSTPJNI.so,\
+  lib/commons-lang-2.4.jar,lib/libcvc3.jar
+  
+ 
 
 jpf-symbc.classpath=\
   build/jpf-symbc-classes.jar 
@@ -19,7 +25,7 @@ jpf-symbc.classpath=\
 
 peer_packages= gov.nasa.jpf.symbc,${peer_packages}
 
-insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
+vm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
 vm.storage.class= 
 
