--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,8 @@
     <pathelement location="build/main"/>
     <pathelement location="build/peers"/>
 	<pathelement location="build/annotations"/>
-  
+	<pathelement location="build/classes"/>
+
     <fileset dir=".">
   	  <include name="lib/*.jar"/>
     </fileset>
@@ -49,6 +50,8 @@
     <!-- add in what we need from the core -->
     <pathelement location="${jpf-core}/build/main"/>
     <pathelement location="${jpf-core}/build/peers"/>
+	
+
     <fileset dir="${jpf-core}">
   	  <include name="lib/*.jar"/>
     </fileset>
