--- a/build.xml
+++ b/build.xml
@@ -143,14 +143,9 @@
 
   <target name="-compile-tests" if="have_tests" depends="-compile-annotations,-compile-main">
     <mkdir dir="build/tests"/>
-    <javac srcdir="src/tests" destdir="build/tests"
-           debug="${debug}" source="${src_level}" deprecation="${deprecation}"
-           includes="*,gov/nasa/jpf/test/**">
-      <classpath>
-        <path refid="lib.path"/>
-        <pathelement location="build/annotations"/>
-      </classpath>
-    </javac>
+  	 <javac srcdir="src/tests" destdir="build/tests"
+  	           debug="${debug}" source="${src_level}" deprecation="${deprecation}"
+  	           classpathref="lib.path"/>
   </target>
 
   <target name="-compile-examples" if="have_examples" depends="-compile-annotations,-compile-main">
