--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,9 @@
   <!-- if there is none, default to a 'jpf-core' peer dir -->
   <property name="jpf-core" value = "../jpf-core"/>
 
+  <!-- get the jpf-core path properties -->
+  <property file="${jpf-core}/jpf.properties"/>
+
   <!-- compiler settings -->
   <property name="src_level"     value="6"/>
   <property name="debug"         value="on"/>
@@ -40,21 +43,13 @@
     <!-- our own classes and libs come first -->
     <pathelement location="build/main"/>
     <pathelement location="build/peers"/>
-		<pathelement location="build/classes"/>
-	<pathelement location="build/annotations"/>
+    <pathelement location="build/annotations"/>
     <fileset dir=".">
   	  <include name="lib/*.jar"/>
     </fileset>
 
     <!-- add in what we need from the core -->
-    <pathelement location="${jpf-core}/build/main"/>
-    <pathelement location="${jpf-core}/build/peers"/>
-	<pathelement location="${jpf-core}/build/classes"/>
-    <pathelement location="${jpf-core}/build/annotations"/>
-
-    <fileset dir="${jpf-core}">
-  	  <include name="lib/*.jar"/>
-    </fileset>
+    <pathelement path="${jpf-core.native_classpath}"/>
 
   </path>
 
@@ -143,44 +138,58 @@
 
   <target name="-compile-tests" if="have_tests" depends="-compile-annotations,-compile-main">
     <mkdir dir="build/tests"/>
-  	 <javac srcdir="src/tests" destdir="build/tests"
-  	           debug="${debug}" source="${src_level}" deprecation="${deprecation}"
-  	           classpathref="lib.path"/>
+      <javac srcdir="src/tests" destdir="build/tests"
+  	     debug="${debug}" source="${src_level}" deprecation="${deprecation}">
+         <classpath>
+           <path refid="lib.path"/>
+           <pathelement location="build/classes"/>
+         </classpath>
+      </javac>
   </target>
 
   <target name="-compile-examples" if="have_examples" depends="-compile-annotations,-compile-main">
     <mkdir dir="build/examples" />
     <javac srcdir="src/examples" destdir="build/examples"
-           debug="${debug}" source="${src_level}" deprecation="${deprecation}"
-           classpathref="lib.path"/>
+           debug="${debug}" source="${src_level}" deprecation="${deprecation}">
+       <classpath>
+         <path refid="lib.path"/>
+         <pathelement location="build/classes"/>
+       </classpath>
+    </javac>
   </target>
 
   
   <!-- ======================= MISC SECTION ================================ -->
-  
+ 
+  <!-- build jars -->
+  <target name="build" depends="compile,-jar-jvm,-jar-jpf,-jar-annotations"
+          description="generate the ${ant.project.name} jar files" >
+  </target>
 
-	  <!-- build jars -->
-	  <target name="build" depends="compile"
-	        description="generate the core jpf-symbc jar files" >
+  <target name="-jar-jvm" if="have_jvm_code">
+    <jar jarfile="build/${ant.project.name}.jar">
+      <fileset dir="build/main" erroronmissingdir="false"/>
+      <fileset dir="build/peers" erroronmissingdir="false"/>
+      <fileset dir="build/annotations" erroronmissingdir="false"/>
+    </jar>
+  </target>
 
-	    <jar jarfile="build/jpf-symbc.jar" index="true">
-	      <fileset dir="build/main"/>
-	      <fileset dir="build/peers"/>
-	    </jar>
+  <target name="-jar-jpf" if="have_jpf_code">
+    <jar jarfile="build/${ant.project.name}-classes.jar">
+      <fileset dir="build/classes" erroronmissingdir="false"/>
+      <fileset dir="build/annotations" erroronmissingdir="false"/>
+    </jar>
+  </target>
 
-	    <jar jarfile="build/jpf-symbc-classes.jar">
-	      <fileset dir="build/classes"/>
-	      <fileset dir="build/annotations"/>
-	    </jar>
-
-
-
-	  </target>
+  <target name="-jar-annotations" if="have_annotations">
+    <jar jarfile="build/${ant.project.name}-annotations.jar">
+      <fileset dir="build/annotations" erroronmissingdir="false"/>
+    </jar>
+  </target>
 
 
   <!-- public clean: cleanup from previous tasks/builds -->
   <target name="clean">
-    <delete dir="build" />
     <delete dir="build" />
     <delete>
       <fileset dir="." includes="**/*~" defaultexcludes="no" />
@@ -193,7 +202,7 @@
 
   <!-- ======================= TEST SECTION ================================ -->
 
-  <target name="test" depends="compile"
+  <target name="test" depends="build"
           description="compile and run core regression tests" if="have_tests">
 
     <property name="junit.usefile" value="false"/>
