--- a/jpf.properties
+++ b/jpf.properties
@@ -32,5 +32,5 @@ jpf-symbc.classpath=\
 vm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
 # no state matching
-vm.storage.class=
+vm.storage.class=nil
 
