(no commit message)

--- a/jpf.properties
+++ b/jpf.properties
@@ -16,11 +16,11 @@ jpf-symbc.native_classpath=\
   lib/libSTPJNI.so;\
   lib/commons-lang-2.4.jar;\
   lib/libcvc3.jar
-  
- 
+
+
 
 jpf-symbc.classpath=\
-  build/jpf-symbc-classes.jar 
+  build/jpf-symbc-classes.jar
 
 
 ### configurations specific to the symbc project
@@ -32,5 +32,5 @@ jpf-symbc.classpath=\
 vm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
 # no state matching
-vm.storage.class=nil
+# vm.storage.class=nil
 
