Added home directory expansion to properties

--- a/jpf.properties
+++ b/jpf.properties
@@ -5,22 +5,20 @@ jpf-symbc = ${config_path}
 
 # we need to use ';' delimiters so that NetBeans/Ant can use this as a path spec
 jpf-symbc.native_classpath=\
-  build/jpf-symbc.jar;\
-  lib/choco-1_2_04.jar;\
-  lib/STPJNI.jar;\
-  lib/hampi.jar;\
-  lib/scale.jar;\
-  lib/automaton.jar;\
-  lib/iasolver.jar;\
-  lib/string.jar;\
-  lib/libSTPJNI.so;\
-  lib/commons-lang-2.4.jar;\
-  lib/libcvc3.jar
-
-
+  ${jpf-symbc}/build/jpf-symbc.jar;\
+  ${jpf-symbc}/lib/choco-1_2_04.jar;\
+  ${jpf-symbc}/lib/STPJNI.jar;\
+  ${jpf-symbc}/lib/hampi.jar;\
+  ${jpf-symbc}/lib/scale.jar;\
+  ${jpf-symbc}/lib/automaton.jar;\
+  ${jpf-symbc}/lib/iasolver.jar;\
+  ${jpf-symbc}/lib/string.jar;\
+  ${jpf-symbc}/lib/libSTPJNI.so;\
+  ${jpf-symbc}/lib/commons-lang-2.4.jar;\
+  ${jpf-symbc}/lib/libcvc3.jar
 
 jpf-symbc.classpath=\
-  build/jpf-symbc-classes.jar
+  ${jpf-symbc}/build/jpf-symbc-classes.jar
 
 
 ### configurations specific to the symbc project
