--- a/jpf.properties
+++ b/jpf.properties
@@ -7,6 +7,7 @@ jpf-symbc = ${config_path}
 jpf-symbc.native_classpath=\
   ${jpf-symbc}/build/jpf-symbc.jar;\
   ${jpf-symbc}/lib/choco-1_2_04.jar;\
+  ${jpf-symbc}/lib/choco-solver-2.1.1-20100709.142532-2.jar;\
   ${jpf-symbc}/lib/STPJNI.jar;\
   ${jpf-symbc}/lib/hampi.jar;\
   ${jpf-symbc}/lib/scale.jar;\
@@ -14,6 +15,9 @@ jpf-symbc.native_classpath=\
   ${jpf-symbc}/lib/iasolver.jar;\
   ${jpf-symbc}/lib/string.jar;\
   ${jpf-symbc}/lib/commons-lang-2.4.jar;\
+  ${jpf-symbc}/lib/commons-math-1.2.jar;\
+  ${jpf-symbc}/lib/coral.jar;\
+  ${jpf-symbc}/lib/opt4j-2.2.jar;\
   ${jpf-symbc}/lib/libcvc3.jar
 
 jpf-symbc.classpath=\
