--- a/jpf.properties
+++ b/jpf.properties
@@ -21,7 +21,8 @@ jpf-symbc.native_classpath=\
   ${jpf-symbc}/lib/libcvc3.jar;\
   ${jpf-symbc}/lib/org.sat4j.core.jar;\
   ${jpf-symbc}/lib/org.sat4j.pb.jar;\
-  ${jpf-symbc}/lib/aima-core.jar
+  ${jpf-symbc}/lib/aima-core.jar;\
+  ${jpf-symbc}/lib/yicesapijava.jar
 
 jpf-symbc.classpath=\
   ${jpf-symbc}/build/jpf-symbc-classes.jar
