adding the annotations jar to the native classpath

--- a/jpf.properties
+++ b/jpf.properties
@@ -6,6 +6,7 @@ jpf-symbc = ${config_path}
 # we need to use ';' delimiters so that NetBeans/Ant can use this as a path spec
 jpf-symbc.native_classpath=\
   ${jpf-symbc}/build/jpf-symbc.jar;\
+  ${jpf-symbc}/build/jpf-symbc-annotations.jar;\
   ${jpf-symbc}/lib/choco-1_2_04.jar;\
   ${jpf-symbc}/lib/choco-solver-2.1.1-20100709.142532-2.jar;\
   ${jpf-symbc}/lib/STPJNI.jar;\
