pathch from mateusz

--- a/jpf.properties
+++ b/jpf.properties
@@ -27,6 +27,9 @@ jpf-symbc.native_classpath=\
 
 jpf-symbc.classpath=\
   ${jpf-symbc}/build/jpf-symbc-classes.jar
+  
+jpf-symbc.test_classpath=\
+  build/tests
 
 
 ### configurations specific to the symbc project
