--- a/build.xml
+++ b/build.xml
@@ -243,6 +243,7 @@
           <exclude name="**/JPF_*.class"/>
           <include name="**/Test*.class"/>
           <exclude name="**/TestBitwise*.class"/>
+		  <exclude name="/gov/nasa/jpf/symbc/strings/*.class"/>
           <exclude name="**/Test*$*.class"/>
           <exclude name="**/TestSymbolicListener.class"/>
           <exclude name="**/TestSymbolicOutput.class"/>
