--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,7 @@
 	<classpathentry kind="lib" path="lib/yicesapijava.jar"/>
 	<classpathentry kind="lib" path="lib/aima-core.jar"/>
 	<classpathentry kind="lib" path="lib/bcel.jar"/>
+	<classpathentry kind="lib" path="/home/gideon/Downloads/Example/JSAP-2.1.jar"/>
+	<classpathentry kind="lib" path="/home/gideon/Downloads/Example/Statemachines.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
