made \"no state matching\" as default

--- a/jpf.properties
+++ b/jpf.properties
@@ -27,7 +27,7 @@ jpf-symbc.native_classpath=\
 
 jpf-symbc.classpath=\
   ${jpf-symbc}/build/jpf-symbc-classes.jar
-  
+
 jpf-symbc.test_classpath=\
   build/tests
 
@@ -41,5 +41,5 @@ jpf-symbc.test_classpath=\
 vm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
 # no state matching
-#vm.storage.class=nil
+vm.storage.class=nil
 
