Added Green to SPC enabled by symboli.greem=true When not enabled everything works as before Otherwise Green does the decision procedure part We still need to add the constraint solving, but should be easy Right now only cvc3 is supported in Green

--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/bcel.jar"/>
 	<classpathentry kind="lib" path="/jpf-core/lib/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/opt4j-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/solver.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
