--- a/jpf.properties
+++ b/jpf.properties
@@ -15,6 +15,7 @@ jpf-symbc.native_classpath=\
   ${jpf-symbc}/lib/automaton.jar;\
   ${jpf-symbc}/lib/iasolver.jar;\
   ${jpf-symbc}/lib/string.jar;\
+  ${jpf-symbc}/lib/solver.jar;\
   ${jpf-symbc}/lib/commons-lang-2.4.jar;\
   ${jpf-symbc}/lib/commons-math-1.2.jar;\
   ${jpf-symbc}/lib/coral.jar;\
