--- a/build.xml
+++ b/build.xml
@@ -33,8 +33,11 @@
 
 
   <!-- compiler settings -->
-  <property name="src_level"     value="6"/>
-  <property name="debug"         value="on"/>
+  <property name="src_level"     value="7"/>
+
+<!--  <property name="src_level"     value="6"/> -->
+
+<property name="debug"         value="on"/>
   <property name="deprecation"   value="on"/>
 
 
