--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,6 @@
   <!-- get the jpf-core path properties -->
   <property file="${jpf-core}/jpf.properties"/>
 
-
   <!-- compiler settings -->
   <property name="src_level"     value="7"/>
 
@@ -39,7 +38,6 @@
 
 <property name="debug"         value="on"/>
   <property name="deprecation"   value="on"/>
-
 
   <!-- generic classpath settings -->
   <path id="lib.path">
@@ -113,27 +111,30 @@
   <target name="-compile-annotations" if="have_annotations">
     <mkdir dir="build/annotations"/>
     <javac srcdir="src/annotations" destdir="build/annotations"
-           debug="${debug}" source="${src_level}" deprecation="${deprecation}" classpath=""/>
+           debug="${debug}" source="${src_level}" deprecation="${deprecation}" classpath="" includeantruntime="false" />
   </target>
 
   <target name="-compile-main" if="have_main">
     <mkdir dir="build/main"/>
     <javac srcdir="src/main" destdir="build/main"
            debug="${debug}" source="${src_level}" deprecation="${deprecation}"
-           classpathref="lib.path"/>
+           classpathref="lib.path"
+		   includeantruntime="false"/>
   </target>
 
   <target name="-compile-peers" if="have_peers" depends="-compile-main" >
     <mkdir dir="build/peers"/>
     <javac srcdir="src/peers" destdir="build/peers"
            debug="${debug}" source="${src_level}" deprecation="${deprecation}"
-           classpathref="lib.path"/>
+           classpathref="lib.path"
+		   includeantruntime="false"/>
   </target>
 
   <target name="-compile-classes" if="have_classes" depends="-compile-annotations,-compile-main" >
     <mkdir dir="build/classes"/>
     <javac srcdir="src/classes" destdir="build/classes"
-           debug="${debug}" source="${src_level}" deprecation="${deprecation}">
+           debug="${debug}" source="${src_level}" deprecation="${deprecation}"
+		   includeantruntime="false">
       <classpath>
         <path refid="lib.path"/>
         <pathelement location="build/annotations"/>
@@ -144,7 +145,8 @@
   <target name="-compile-tests" if="have_tests" depends="-compile-annotations,-compile-main">
     <mkdir dir="build/tests"/>
     <javac srcdir="src/tests" destdir="build/tests"
-           debug="${debug}" source="${src_level}" deprecation="${deprecation}">
+           debug="${debug}" source="${src_level}" deprecation="${deprecation}"
+		   includeantruntime="false">
       <classpath>
         <path refid="lib.path"/>
         <pathelement location="build/classes"/>
@@ -156,7 +158,8 @@
   <target name="-compile-examples" if="have_examples" depends="-compile-annotations,-compile-main">
     <mkdir dir="build/examples" />
     <javac srcdir="src/examples" destdir="build/examples"
-           debug="${debug}" source="${src_level}" deprecation="${deprecation}">
+           debug="${debug}" source="${src_level}" deprecation="${deprecation}"
+		   includeantruntime="false">
     <classpath>
         <path refid="lib.path"/>
         <pathelement location="build/classes"/>
