changed vm to jvm for stateless option got rid of infinite loop

--- a/jpf.properties
+++ b/jpf.properties
@@ -43,5 +43,5 @@ jpf-symbc.test_classpath=\
 jvm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
 # no state matching
-vm.storage.class=nil
+jvm.storage.class=nil
 
