Added/changed parts in relation to per-thread analysis

--- a/jpf.properties
+++ b/jpf.properties
@@ -25,7 +25,8 @@ jpf-symbc.native_classpath=\
   ${jpf-symbc}/lib/org.sat4j.pb.jar;\
   ${jpf-symbc}/lib/aima-core.jar;\
   ${jpf-symbc}/lib/yicesapijava.jar;\
-  ${jpf-symbc}/lib/PathConditionsReliability-0.0.1.jar
+  ${jpf-symbc}/lib/PathConditionsReliability-0.0.1.jar;\
+  ${jpf-symbc}/lib/grappa.jar
 
 jpf-symbc.classpath=\
   ${jpf-symbc}/build/jpf-symbc-classes.jar
