--- a/jpf.properties
+++ b/jpf.properties
@@ -44,5 +44,5 @@ jpf-symbc.test_classpath=\
 jvm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
 # no state matching
-jvm.storage.class=nil
+vm.storage.class=nil
 
