--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/grappa.jar"/>
 	<classpathentry kind="lib" path="lib/jaxen.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-2.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/green.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
