--- a/jpf.properties
+++ b/jpf.properties
@@ -41,7 +41,7 @@ jpf-symbc.test_classpath=\
 # property parser doesn't like recursion
 +peer_packages = gov.nasa.jpf.symbc;
 
-jvm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
+vm.insn_factory.class=gov.nasa.jpf.symbc.SymbolicInstructionFactory
 
 # no state matching
 vm.storage.class=nil
